  This used the probability distribution from all tags assigned to randomly
  break ties based on that distribution.

* `term_count` gets an auto-collapse feature for hierarchical `term.list`s with
  duplicate names.  A message is printed telling the user this is happening.  To
  get the hierarchical coverage use `attributes(x2)[['pre_collapse_coverage']]`.


CHANGES


termco 0.3.0 - 0.3.6
----------------------------------------------------------------

BUG FIXES

* `colo` returned list rather than string if a single term was passed.  Spotted
  by Steve Simpson.  See issue #12.

* `term_count` did not handle hierarchical `term.list` correctly due to a
  reordering done by **data.table** (when `group.vars` not `= TRUE`).  This
  has been corrected.

* Column ordering was not respected by `print.term_count`.

* `colo` did not copy to the clip board when `copy2clip` was `TRUE` and a single
  expression was passed to `...`.

NEW FEATURES

* `important_terms` added to compliment `frequent_terms` allowing tf-idf
  weighted terms to rise to the top.

* `collapse_tags` added to combine tags/columns from `term_count` object without
  stripping the `term_count` class and attributes.

MINOR FEATURES

* `plot_counts` picks up a `drop` argument to enable terms not found (if `x` is
  a `as_terms` object created from a `term_count` object) to be retained in the
  bar plot.  Suggested by Steve Simpson.  See issue #18.

IMPROVEMENTS

* `colo` automatically adds a group parenthesis around `...` regexes to protect
  the grouping explicitly.  This is useful when a regex used or pipes (`|`).
  This would create an unintended expression that was overly aggressive (see #20).




termco 0.2.0
----------------------------------------------------------------

NEW FEATURES

* `validate_model` and `assign_validation_task` added to allow for human
  assessment of how accurate a model is functioning.

CHANGES

* `probe_colo_list`,`probe_colo_plot_list`, & `probe_colo_plot` all use